# app/Http/Requests/CreateLoanRequest.php
@@ -2,7 +2,7 @@
 
 namespace App\Http\Requests;
 
-class CreateOrUpdateBookRequest extends ApiFormRequest
+class CreateLoanRequest extends ApiFormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -20,10 +20,9 @@ class CreateOrUpdateBookRequest extends ApiFormRequest
     public function rules(): array
     {
         return [
-            'title' => 'required',
-            'publication_year' => 'required|integer',
-            'authors' => 'required|array',
-            'authors.*.author_id' => 'required|exists:authors,id'
+            'book_id' => 'required|exists:books,id',
+            'loan_date' => 'required|date',
+            'due_date' => 'required|date|after_or_equal:loan_date'
         ];
     }
 }
